2016-02-25 Release 1.0.1:
- Fixing documentation issues
2016-02-17 Release 1.0.0
- Initial version of the module