@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "TubeMogul Inc.",
   "summary": "Aerospike servers management via Puppet",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "source": "git@github.com:tubemogul/puppet-aerospike.git",
   "project_page": "https://github.com/tubemogul/puppet-aerospike",
   "issues_url": "https://github.com/tubemogul/puppet-aerospike/issues",
@@ -20,15 +20,11 @@
       "operatingsystem": "Debian",
       "operatingsystemrelease":
       [
-        "6","8"
+        "6","7","8"
       ]
     }
   ],
   "dependencies": [
-    {
-      "name": "puppetlabs-stdlib",
-      "version_requirement": ">= 1.0.0"
-    },
     {
       "name": "puppet/archive",
       "version_requirement": ">= 0.0.1 < 1.0.0"
