@@ -1,4 +1,5 @@
-2016-02-25 Release 1.0.1:
+2016-03-02 Release 1.0.1:
 - Fixing documentation issues
+- Fixing metadata quality
 2016-02-17 Release 1.0.0
 - Initial version of the module
